--- a/01.html
+++ b/01.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>crypto tochigi</title>
+    <title>very simple DApps</title>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"></script>
     <script src="./abi.js"></script>
     <script src="./reader.js"></script>
