--- a/01.html
+++ b/01.html
@@ -11,7 +11,8 @@
 
 <body>
 <h1>very simple DApps</h1>
-<p>シンプルなページ</p>
+<p>対応ブラウザ：chrome + metamask</p>
+<p>F12キーを押してスマートコントラクトからの情報を確認</p>
 <form action="./tx_sender"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
 
 </body>
