--- a/01.html
+++ b/01.html
@@ -12,6 +12,7 @@
 <body>
 <h1>very simple DApps</h1>
 <p>対応ブラウザ：chrome + metamask</p>
+<p>利用ネットワーク：ropsten testnet (metamaskのネットワークを切り替えてください)</p>
 <p>F12キーを押してスマートコントラクトからの情報を確認</p>
 <form action="./tx_sender"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
 
