--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
 <h1>very simple DApps</h1>
 <p>対応ブラウザ：chrome + metamask</p>
-<p>利用ネットワーク：ropsten testnet (metamaskのネットワークを切り替えてください)</p>
 <p>F12キーを押してスマートコントラクトからの情報を確認</p>
+<div>↓ブロックチェーンから取得したget3関数の結果</div>
+<p id="id3">トラブルが起きています</p>
+<div>↓ブロックチェーンから取得したget3関数の結果</div>
+<p id="idn">トラブルが起きています</p>
+<br><br>
 <form action="./tx_sender"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
 
 </body>
