--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>very simple DApps</h1>
 <p>対応ブラウザ：chrome + metamask</p>
-<p>F12キーを押してスマートコントラクトからの情報を確認</p>
+<p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p><br><br>
 <div>↓ブロックチェーンから取得したget3関数の結果</div>
 <p id="id3">トラブルが起きています</p>
 <div>↓ブロックチェーンから取得したget3関数の結果</div>
