--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p><br><br>
 <div>↓ブロックチェーンから取得したget3関数の結果</div>
 <p id="id3">トラブルが起きています</p>
-<div>↓ブロックチェーンから取得したget3関数の結果</div>
+<div>↓ブロックチェーンから取得したgetnumber関数の結果</div>
 <p id="idn">トラブルが起きています</p>
 <br><br>
 <form action="./tx_sender"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
