--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <div>↓ブロックチェーンから取得したgetnumber関数の結果</div>
 <p id="idn">トラブルが起きています</p>
 <br><br>
-<form action="./tx_sender"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
+<form action="myButtonClicked"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
+<input type="button" value="トランザクション送信" onClick=myButtonClicked >
 
 </body>
 
