--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>very simple DApps</title>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"></script>
     <script src="./reader.js"></script>
+    <script src="./writer.js"></script>
 </head>
 
 <body>
