--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p id="idn">トラブルが起きています</p>
 <br><br>
 <form action="myButtonClicked"  target="_blank" ><input type="text" name="q1" size="30"><input type="submit" value="トランザクション送信"></form>
-<input type="button" value="トランザクション送信" onClick=myButtonClicked >
+<input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信" onClick=myButtonClicked >
 
 </body>
 
