--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div>↓ブロックチェーンから取得したgetnumber関数の結果</div>
 <p id="idn">トラブルが起きています</p>
 <br><br>
-<input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信" onClick=myButtonClicked() >
+<input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信" onclick="myButtonClicked()" >
 
 </body>
 
