--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <div>↓ブロックチェーンから取得したgetnumber関数の結果</div>
 <p id="idn">トラブルが起きています</p>
 <br><br>
+<p>setnumber関数の呼び出し(ガス代がかかります)</p>
 <input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信" onclick="myButtonClicked()" >
 
 </body>
