very simple dapps

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
-<h1>very simple DApps</h1>
-<p>対応ブラウザ：chrome + metamask</p>
-<p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p><br><br>
-<div>↓ブロックチェーンから取得したget3関数の結果</div>
-<p id="id3">トラブルが起きています</p>
-<div>↓ブロックチェーンから取得したgetnumber関数の結果</div>
-<p id="idn">トラブルが起きています</p>
-<br><br>
-<p>setnumber関数の呼び出し(ガス代がかかります)</p>
-<input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信" onclick="myButtonClicked()" >
+    <h1>very simple DApps</h1>
+    <p>対応ブラウザ：chrome + metamask</p>
+    <p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p><br><br>
+    <div>↓ブロックチェーンから取得したget3関数の結果</div>
+    <p id="id3">トラブルが起きています</p>
+    <div>↓ブロックチェーンから取得したgetnumber関数の結果</div>
+    <p id="idn">トラブルが起きています</p>
+    <br><br>
+    <p>setnumber関数の呼び出し(ガス代がかかります)</p>
+    <input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信"
+        onclick="myButtonClicked()">
 
 </body>
 
